// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServiceWorkerUpdatedDialog NewReleaseDialog matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n"
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitAlignItems": " center",
          "WebkitBoxAlign": " center",
          "alignItems": " center",
          "display": "flex",
          "msFlexAlign": " center",
          "paddingTop": "32px",
        }
      }
    >
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "height": "144px",
            "marginBottom": "45px",
            "position": "relative",
            "top": "0px",
            "width": "279px",
          }
        }
      >
        <div
          className="css-view-1dbjc4n"
          style={
            Object {
              "WebkitBoxPack": "end",
              "WebkitJustifyContent": "flex-end",
              "height": "100px",
              "justifyContent": "flex-end",
              "marginTop": "50px",
              "msFlexPack": "end",
              "width": "100%",
            }
          }
        >
          <div
            className="css-view-1dbjc4n"
            style={
              Object {
                "marginBottom": "-20px",
                "width": "100%",
              }
            }
          />
        </div>
      </div>
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "borderBottomColor": "rgba(0,175,255,1.00)",
            "borderBottomStyle": "solid",
            "borderBottomWidth": "2px",
            "borderTopColor": "rgba(0,175,255,1.00)",
            "borderTopStyle": "solid",
            "borderTopWidth": "2px",
            "color": "rgba(0,195,174,1.00)",
            "fontFamily": "Roboto",
            "fontSize": "26px",
            "fontWeight": "700",
            "lineHeight": "38px",
            "marginBottom": "9px",
            "paddingBottom": "9px",
            "paddingTop": "9px",
            "textAlign": "left",
            "textDecoration": "none",
            "textTransform": "none",
            "width": "100%",
          }
        }
      >
        Good News: We’re Live!
      </div>
    </div>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "minHeight": "100px",
        }
      }
    >
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "color": "rgba(66,69,74,1.00)",
            "fontFamily": "Roboto",
            "fontSize": "14px",
            "fontWeight": "normal",
            "lineHeight": "30px",
            "textAlign": "left",
            "textDecoration": "none",
            "textTransform": "none",
          }
        }
      >
        <span
          className="css-text-901oao css-textHasAncestor-16my406"
          dir="auto"
          style={
            Object {
              "color": "rgba(66,69,74,1.00)",
              "fontFamily": "Roboto",
              "fontSize": "14px",
              "fontWeight": "700",
              "lineHeight": "30px",
              "textAlign": "center",
              "textDecoration": "none",
              "textTransform": "none",
            }
          }
        >
          1.
        </span>
         Click ‘update’

        <span
          className="css-text-901oao css-textHasAncestor-16my406"
          dir="auto"
          style={
            Object {
              "color": "rgba(66,69,74,1.00)",
              "fontFamily": "Roboto",
              "fontSize": "14px",
              "fontWeight": "700",
              "lineHeight": "30px",
              "textAlign": "center",
              "textDecoration": "none",
              "textTransform": "none",
            }
          }
        >
          2.
        </span>
         Sign up (one last time, we promise )

        <span
          className="css-text-901oao css-textHasAncestor-16my406"
          dir="auto"
          style={
            Object {
              "color": "rgba(66,69,74,1.00)",
              "fontFamily": "Roboto",
              "fontSize": "14px",
              "fontWeight": "700",
              "lineHeight": "30px",
              "textAlign": "center",
              "textDecoration": "none",
              "textTransform": "none",
            }
          }
        >
          3.
        </span>
         Start claiming your free, REAL G$’s
      </div>
    </div>
  </div>
</div>
`;

exports[`ServiceWorkerUpdatedDialog RegularDialog matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n r-flex-13awgt0 r-pointerEvents-12vffkv"
>
  <div
    className="css-view-1dbjc4n"
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitAlignItems": " center",
          "WebkitBoxAlign": " center",
          "alignItems": " center",
          "display": "flex",
          "msFlexAlign": " center",
          "paddingTop": "32px",
        }
      }
    >
      <div
        className="css-view-1dbjc4n"
        style={
          Object {
            "WebkitBoxPack": "center",
            "WebkitJustifyContent": "center",
            "height": "134px",
            "justifyContent": "center",
            "marginBottom": "25px",
            "msFlexPack": "center",
            "textAlign": "center",
            "width": "191px",
          }
        }
      >
        <updateversion.svg />
      </div>
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "borderBottomColor": "rgba(0,175,255,1.00)",
            "borderBottomStyle": "solid",
            "borderBottomWidth": "2px",
            "color": "rgba(66,69,74,1.00)",
            "fontFamily": "Roboto",
            "fontSize": "22px",
            "fontWeight": "700",
            "lineHeight": "26px",
            "marginBottom": "9px",
            "paddingBottom": "9px",
            "textAlign": "left",
            "textDecoration": "none",
            "textTransform": "none",
            "width": "100%",
          }
        }
      >
        Hip hip hooray!
We have a new version :)
      </div>
    </div>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "minHeight": "100px",
        }
      }
    >
      <div
        className="css-text-901oao"
        dir="auto"
        style={
          Object {
            "color": "rgba(66,69,74,1.00)",
            "fontFamily": "Roboto",
            "fontSize": "14px",
            "fontWeight": "normal",
            "lineHeight": "20px",
            "textAlign": "left",
            "textDecoration": "none",
            "textTransform": "none",
          }
        }
      >
        Thanks to your awesome feedback we were able to improve our wallet. We hope now you’ll enjoy it even more.
      </div>
    </div>
  </div>
</div>
`;
